@@ -16,6 +16,7 @@ v4.6.0 (Unreleased)
 - Fix: WooCommerce - Inside dropdown cart buttons are not aligned properly on WooCommerce pages.
 - Fix: WooCommerce - Shop card structure gets broken if the Add To Cart button is kept just below the title.
 - Fix: Input fields border focus did not consistently inherit the correct styling in certain scenarios.
+- Fix: PHP deprecated notices with PHP 8.0 and above when activating the theme.
 
 v4.5.1
 - Improvement: Compatibility with WooCommerce 8.3.
